<resources>
    <string name="app_name">Dotdot</string>
    --------------------------------------------------------------------------------------------
    //忘記密碼
    <string name="fp_forgetpassword">忘記密碼</string>
    <string name="fp_reset">重設密碼</string>
    <string name="fp_title">手機號碼</string>
    <string name="fp_title_1">驗證碼</string>
    <string name="fp_title_2">輸入新密碼</string>
    <string name="fp_title_3">再次輸入</string>
    <string name="fp_comfrim">確定</string>

    <array name="hintQes">
        <item>你的第一隻寵物是什麼名子?</item>
        <item>你最喜歡的老師是什麼名子?</item>
        <item>你最好的朋友是什麼名子?</item>
    </array>
    ----------------------------------------------------------------------------------------------
    //註冊
    <string name="regist">註冊</string>
    <string name="regist_username">使用者名稱</string>
    <string name="regist_password">密碼</string>
    <string name="regist_password2">再次輸入密碼</string>
    <string name="regist_phone">手機</string>
    <string name="birthday">生日</string>
    <string name="regist_birth">西元/月/日</string>
    <string name="regist_checkbox">我同意服務條款及隱私權政策</string>
    ----------------------------------------------------------------------------------------------
    //登入
    <string name="login">登入</string>
    <string name="login_phone">手機</string>
    <string name="login_password">密碼</string>
    <string name="login_fp">忘記密碼?</string>
    <string name="login_rg">還沒註冊?</string>
    <string name="login_or">或是</string>
    <string name="login_storeregist">店家註冊</string>
    ----------------------------------------------------------------------------------------------
    //帳號驗證
    <string name="verification">帳號驗證</string>
    <string name="verification_num">驗證碼</string>
    <string name="verification_button">完成</string>
    ----------------------------------------------------------------------------------------------
    //店家註冊
    <string name="storeregist">註冊</string>
    <string name="storeregist_name">店名</string>
    <string name="storeregist_address">地址</string>
    <string name="storeregist_phone">電話</string>
    <string name="storeregist_certificate">營業證明</string>
    <string name="storeregist_checkbox">我同意服務條款及隱私權政策</string>
    <string name="storeregist_join">申請加入</string>
    ----------------------------------------------------------------------------------------------
    //個人資料
    <string name="personal_account">帳戶</string>
    <string name="personal_edit">編輯</string>
    <string name="personal_name">姓名 :</string>
    <string name="personal_phone">手機 :</string>
    <string name="personal_password">密碼 :</string>
    <string name="personal_logout">登出</string>
    ----------------------------------------------------------------------------------------------
    //店家資料
    <string name="store_name">店名 :</string>
    <string name="store_address">地址 :</string>
    <string name="store_phone">電話 :</string>
    ----------------------------------------------------------------------------------------------
    //地圖
    <string name="getpoint">Dot!</string>
    <string name="givepoint">Scan!</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps">DotDot</string>
    <string name="title_activity_store_index">DotStore</string>
    ----------------------------------------------------------------------------------------------
    //店家新增集點卡
    <string name="loyalty_card_title">集點卡設定</string>
    <string name="loyalty_card_rate">金錢點數比</string>
    <string name="loyalty_card_dot">&#160;&#160;&#160;&#160;&#160;&#160;&#160;1&#160;&#160;&#160;&#160;點&#160;&#160;&#160;&#160;&#160;:</string>
    <string name="loyalty_card_dollar">元</string>
    <string name="loyalty_card_color">選擇顏色</string>
    <string name="loyalty_card_save">儲&#160;存&#160;&#160;!</string>
    -----------------------------------------------------------------------------------------------
    //會員交易紀錄
    <string name="recordTxt">交易紀錄</string>
    <string name="get">獲得</string>
    <string name="use">使用</string>
    <string name="coupon">優惠券</string>
    <string name="dodo">點</string>
    <string name="zhang">張</string>
    <string name="bear">熊賀炒飯</string>
    <string name="hao">號</string>
    <string name="eag">蛋蛋早餐店</string>
    <string name="big">(大)冰奶茶一杯</string>
    ----------------------------------------------------------------------------------------------
    //店家新增優惠卷
    <string name="coupon_title">優惠卷設定</string>
    <string name="coupon_creat">+&#160;新增</string>
    <string name="coupon_content">優惠內容</string>
    <string name="coupon_need">兌換所需點數</string>
    <string name="coupon_timeRange">活動期限</string>
    <string name="coupon_save">新&#160;增&#160;&#160;!</string>
    <string name="coupon_back">先&#160;不&#160;要&#160;&#160;!</string>
    ----------------------------------------------------------------------------------------------
    //fragment
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottomnav">bottomnav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_botnav">botnav</string>
    -----------------------------------------------------------------------------------------------
    //Store QR
    <string name="input_money">輸入金額&#160;:</string>
    <string name="confirm">確認</string>
    <string name="finish">完成!</string>
    <string name="finish1">成功給予</string>
    -----------------------------------------------------------------------------------------------
    //Store notification
    <string name="newone">新增!</string>
    <string name="titlee">標題</string>
    <string name="contx">內容</string>
    <string name="ima">圖片</string>
    <string name="send">發送!</string>
    -----------------------------------------------------------------------------------------------
    //MemberUseCoupon
    <string name="MemberUseCoupon_word1">此動作不可返回，請確認您已在店家櫃檯，
        出示此券於店家人員確認過後按下「使用」</string>
    <string name="google_maps_key" />


</resources>

