<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".test">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/personal_name"
        android:inputType="text"></EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/regist_password"
        android:inputType="text"></EditText>

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/regist_phone"
        android:inputType="text"></EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fp_comfrim"
        android:onClick="insertAccount"></Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="下載"
        android:onClick="getAccount"></Button>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/getinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"></TextView>
    </androidx.core.widget.NestedScrollView>

    </LinearLayout>