<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        android:textColor="#3F51B5"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="70dp"
        android:text="@string/login_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/inputStore"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:layout_marginStart="97dp"
        android:layout_marginLeft="100dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/login_password"
        app:layout_constraintTop_toBottomOf="@id/inputStore"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="97dp"
        android:layout_marginLeft="88dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/loginbt"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/bg_round_button"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>





    <TextView
        android:id="@+id/forgetPassbtn"
        android:layout_width="92dp"
        android:layout_height="44dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/login_fp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/loginbt"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/registbtn"
        android:layout_width="92dp"
        android:layout_height="44dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="72dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/login_rg"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/loginbt"
        app:layout_constraintRight_toRightOf="parent"/>


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/login_or"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassbtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassbtn"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/forgetPassbtn"
        app:layout_constraintRight_toRightOf="parent"/>


    <TextView
        android:id="@+id/storebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/login_storeregist"
        android:textColor="#022F47"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/textView9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>